--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -14,6 +14,12 @@
 
 .about img{
     opacity: 0;
+    width: 25rem;
+    height: 25rem;
+    margin: 1rem;
+    margin-top: 2rem;
+    border-radius: 50%;
+    box-shadow: 0 0 0 pink, 0 0 10px pink, 0 0 20px pink, 0 0 30px pink, 0 0 40px pink, 0 0 80px pink;
     animation: .5s textLeft linear forwards;
 }
 
