--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -50,16 +50,16 @@
 }
 
 .skills input{
-    transform: scaleX(0);
+    transform: scale(0, .5);
     animation: strech .5s linear forwards;
     transform-origin: left;
 }
 
 @keyframes strech{
     0%{
-        transform: scaleX(0);
+        transform: scale(0, .5);
     }
     100%{
-        transform: scaleX(1);
+        transform: scale(1, .5);
     }
 }
